--- a/css/styles.css
+++ b/css/styles.css
@@ -1,121 +1,137 @@
 :root {
-    --fuenteHeading: 'PT Sans', sans-serif;
-    --fuenteParrafos: 'Open Sans', sans-serif;
+  --fuenteHeading: "PT Sans", sans-serif;
+  --fuenteParrafos: "Open Sans", sans-serif;
 
-    --primario: #784D3C;
-    --gris: #e1e1e1;
-    --blanco: #ffffff;
-    --negro: #000000;
-    --form: #3ea3ab;
+  --primario: #784d3c;
+  --gris: #e1e1e1;
+  --blanco: #ffffff;
+  --negro: #000000;
+  --form: #3ea3ab;
 }
 html {
-    box-sizing: border-box;
-    font-size: 62.5%; /* 1 rem = 10px */    
+  box-sizing: border-box;
+  font-size: 62.5%; /* 1 rem = 10px */
 }
-*, *:before, *:after {
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 body {
-    font-family: var(--fuenteParrafos);
-    font-size: 1.6rem;
-    line-height: 2;
+  font-family: var(--fuenteParrafos);
+  font-size: 1.6rem;
+  line-height: 2;
 }
 /** Globales **/
 .contenedor {
-    width: min(90%, 120rem);
-    margin: 0 auto;
+  width: min(90%, 120rem);
+  margin: 0 auto;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
-h1, h2, h3, h4 {
-    font-family: var(--fuenteHeading);
-    line-height: 1.2;
+h1,
+h2,
+h3,
+h4 {
+  font-family: var(--fuenteHeading);
+  line-height: 1.2;
 }
 h1 {
-    font-size: 4.8rem;
+  font-size: 4.8rem;
 }
 h2 {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 h3 {
-    font-size: 3.2rem;
+  font-size: 3.2rem;
 }
 h4 {
-    font-size: 2.8rem;
+  font-size: 2.8rem;
 }
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 /** Utilidades **/
 .no-margin {
-    margin: 0;
+  margin: 0;
 }
 .no-padding {
-    padding: 0;
+  padding: 0;
 }
 .centrar-texto {
-    text-align: center;
+  text-align: center;
 }
 
-
-.encabezado{
-    background-color: var(--primario);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: var(--blanco);
-    
+.encabezado,
+.pie-de-pagina {
+  background-color: var(--primario);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--blanco);
+  padding: 4px 9vh;
 }
-
 
 .formulario {
-    background-color: var(--blanco);
-    margin: -5rem auto 0 auto;
-    width: 95%;
-    padding: 5rem;
-    
+  background-color: var(--blanco);
+  margin: -5rem auto 0 auto;
+  width: 95%;
+  padding: 5rem;
 }
 .campo {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 2rem;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
 }
 .campo__label {
-    flex: 0 0 9rem;
-    text-align: right;
-    padding-right: 2rem;
+  flex: 0 0 9rem;
+  text-align: right;
+  padding-right: 2rem;
 }
 .campo__field {
-    flex: 1;
-    border: 1px solid var(--gris);
+  flex: 1;
+  border: 1px solid var(--gris);
 }
 .campo__field--textarea {
-    height: 20rem;
+  height: 20rem;
 }
 .boton {
-    display: block;
-    font-family: var(--fuenteHeading);
-    color: var(--blanco);
-    text-align: center;
-    padding: 1rem 3rem;
-    font-size: 1.8rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    margin-bottom: 2rem;
-    border: none;
+  display: block;
+  font-family: var(--fuenteHeading);
+  color: var(--blanco);
+  text-align: center;
+  padding: 1rem 3rem;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin-bottom: 2rem;
+  border: none;
 }
-@media (max-width:768px ) {
-    .encabezado{
-        flex-direction: column;
-        font-size: 2rem;
-    }
+@media (max-width: 768px) {
+  .encabezado {
+    flex-direction: column;
+  }
+  .formato {
+    font-size: 2rem;
+  }
+  /* .pie-de-pagina{
 
+        height: 10vh;
+        display: flex;
+        text-align: center;
+        
+    } */
+
+}
+.pie-de-pagina {
+  display: flex;
+  justify-content: center;
 }
 
 .boton:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 .boton--primario {
-    background-color: var(--negro);
+  background-color: var(--negro);
 }
