--- a/CRUDV1/css/styles.css
+++ b/CRUDV1/css/styles.css
@@ -135,3 +135,11 @@ img {
 .boton--primario {
   background-color: var(--negro);
 }
+.options {
+  display: flex;
+  gap: 25px;
+}
+
+#msg {
+  color: red;
+}
