--- a/CRUDV4/css/style.css
+++ b/CRUDV4/css/style.css
@@ -11,7 +11,7 @@ body {
 .app {
   background-color: #fff;
   width: 300px;
-  height: 500px;
+  height: auto;
   border: 5px solid #abcea1;
   border-radius: 8px;
   padding: 15px;
@@ -55,4 +55,8 @@ body {
 
 #tasks div .options i {
   cursor: pointer;
+}
+.derechos{
+  display: flex;
+  
 }
